--- a/style.css
+++ b/style.css
@@ -18,7 +18,11 @@ body {
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  background: linear-gradient(to top left, #28b487, #7dd56f);
+  background: linear-gradient(
+    to top left,
+    #28b487,
+    #7dd56f
+  ); /* there will be a gradient display from left to right  */
 }
 
 .show-modal {
@@ -26,7 +30,7 @@ body {
   font-weight: 600;
   padding: 1.75rem 3.5rem;
   margin: 5rem 2rem;
-  border: none;
+  border: none; /* This will remove the default black border */
   background-color: #fff;
   color: #444;
   border-radius: 10rem;
